# VibeGame

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  agents.md  context7.json  eslint.config.js  llms.txt  package.json  tsconfig.json  vite.config.ts
.claude/commands/: nourish.md
create-vibegame/: index.js  package.json
create-vibegame/template/: llms.txt  package.json
docs/: index.md
docs/examples/: animation.md  index.md  input.md  orbit-camera.md  physics.md  player.md  recipes.md  rendering.md  respawn.md  startup.md  transforms.md  tweening.md
docs/reference/: index.md  physics.md  player.md  rendering.md  tweening.md
example/: context.md  index.html
example/src/: main.ts
examples/: context.md
examples/hello-tauri/: .gitignore  context.md  index.html  package.json  vite.config.ts
examples/hello-tauri/src-tauri/: Cargo.toml  tauri.conf.json
examples/hello-tauri/src-tauri/icons/: icon.icns
examples/hello-world/: context.md  index.html
examples/lorenz/: index.html
examples/multiplayer/: README.md  context.md  package.json  test-connection.ts
examples/multiplayer-hello/: context.md  index.html  package.json
examples/sequencer/: context.md  index.html  package.json  render.sh  vite.config.ts
examples/visualization/: context.md  index.html  package.json  record.html  tsconfig.json  vite.config.ts
layers/: llms-template.txt  structure.md
scripts/: prepare.ts
src/: builder.ts  context.md  index.ts  runtime.ts
src/cli/: context.md  headless.ts  index.ts  projection.ts  queries.ts  snapshot.ts  text.ts
src/core/: context.md  index.ts
(+216 files in other folders)
